# FPROG

FPROG_Project/: CMakeLists.txt  main.cpp  war_and_peace.txt
FPROG_Project/FPROG_Project/: CMakeLists.txt  main  main.cpp  war_and_peace.txt
